--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <!-- Meta tags for character set and viewport settings -->
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta content="Site Title" property="og:title" />
     <meta content="Site Description" property="og:description" />
     <meta content="https://vrefilv.github.io/template/" property="og:url" />
